--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <footer>
         
     </footer>
+
     
+    <!-- Script JS -->
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
